Fix multiselect value wrapping

--- a/web/html/src/branding/css/susemanager/components/inputs.less
+++ b/web/html/src/branding/css/susemanager/components/inputs.less
@@ -9,6 +9,10 @@
   border-color: @input-border-color !important;
   box-shadow: none !important;
   font-size: @font-size-base;
+
+  [class*="ValueContainer"] {
+    flex-wrap: nowrap;
+  }
 }
 
 .form-control {
